--- a/CourseBot/src/App.css
+++ b/CourseBot/src/App.css
@@ -1,8 +1,10 @@
 .app {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: #f5f5f5;
+  color: #333;
 }
 
 .main {
@@ -12,34 +14,8 @@
   align-items: center;
 }
 
-.header {
-  display: flex;
-  justify-content: space-around;
-  width: 100vw;
-  align-items: center;
-  padding: 20px;
-  background-color: whitesmoke;
-  color: rgb(0, 0, 0);
-}
-
 .nav-link {
   margin-right: 10px;
   color: white;
   text-decoration: none;
-}
-
-.nav-link:hover {
-  text-decoration: underline;
-}
-
-.toggle-btn {
-  background-color: white;
-  color: #6200ea;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
-  border-radius: 5px;
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
 }
