--- a/src/component/Dashboard.css
+++ b/src/component/Dashboard.css
@@ -1,10 +1,17 @@
 .co {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
+.side {
+  width: 15%;
+}
+
 .container {
+  width: 85%;
   padding: 30px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+  grid-template-columns: auto auto auto;
   gap: 12px;
 }
