--- a/src/component/Sidebar.css
+++ b/src/component/Sidebar.css
@@ -5,40 +5,26 @@ body {
   padding: 0;
 }
 
+.sidebar-header {
+  margin-top: 16px;
+}
+
 /* Sidebar container */
 .sidebar {
   position: fixed;
   top: 0;
   left: -50px;
-  width: 250px;
+  width: 13%;
   height: 100%;
-  background-color: #2c3e50;
-  color: rgb(236, 20, 20);
+  background-color: #fcebd0;
   transition: all 0.3s ease;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
   overflow: hidden;
 }
 
 /* Sidebar open state */
-.sidebar.open {
+.sidebar {
   left: 0px;
-}
-
-/* Toggle button */
-.toggle-btn {
-  position: absolute;
-  top: 5px;
-  left: 50px;
-  background-color: #2c3e50;
-  color: white;
-  border: none;
-  padding: 10px 15px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.toggle-btn:hover {
-  background-color: #34495e;
 }
 
 /* Sidebar menu styles */
@@ -56,7 +42,7 @@ body {
 }
 
 .sidebar-menu ul li a {
-  color: white;
+  color: Black;
   text-decoration: none;
   font-size: 18px;
   display: block;
@@ -64,5 +50,11 @@ body {
 }
 
 .sidebar-menu ul li a:hover {
-  color: #1abc9c;
+  color: coral;
+}
+
+.logout {
+  position: absolute;
+  bottom: 10px;
+  left: 20px;
 }
