--- a/src/component/Dashboard.css
+++ b/src/component/Dashboard.css
@@ -11,7 +11,7 @@
   width: 85%;
   padding: 30px;
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 12px;
 }
 
