--- a/src/component/Sidebar.css
+++ b/src/component/Sidebar.css
@@ -9,6 +9,11 @@ body {
   margin-top: 16px;
 }
 
+.course {
+  color: white;
+  padding: 20px;
+}
+
 /* Sidebar container */
 .sidebar {
   position: fixed;
@@ -16,7 +21,7 @@ body {
   left: -50px;
   width: 13%;
   height: 100%;
-  background-color: #f8f3ea;
+  background-color: #333;
   transition: all 0.3s ease;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
   overflow: hidden;
@@ -42,7 +47,7 @@ body {
 }
 
 .sidebar-menu ul li a {
-  color: Black;
+  color: white;
   text-decoration: none;
   font-size: 18px;
   display: block;
