Adding Final Changes

--- a/src/component/auth/Form.css
+++ b/src/component/auth/Form.css
@@ -1,5 +1,8 @@
+body {
+  font-family: "Roboto", sans-serif;
+}
 .content-wrapper {
-  background: white;
+  background-color: white;
   padding: 0 0 20px 0;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -43,11 +46,11 @@ img {
 }
 
 .bot {
-  color: coral;
+  color: #007bff;
 }
 
 a:hover {
-  color: coral;
+  color: 3498db;
 }
 
 form {
@@ -70,7 +73,7 @@ form {
 }
 
 .submit-btn {
-  background-color: coral;
+  background-color: #3498db;
   color: white;
   padding: 10px 20px;
   cursor: pointer;
