--- a/src/component/webMain/css/mainPage.css
+++ b/src/component/webMain/css/mainPage.css
@@ -102,13 +102,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 100dvw;
+  width: 100%;
 }
 .wrapper-container {
   background-color: #f4f4f9;
+  width: 100%;
 }
 .side {
-  width: 20dvw;
+  width: 20%;
 }
 
 .container {
@@ -116,13 +117,14 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 12px;
+  width: 80%;
 }
 .mainContainer {
   flex: 1;
   padding: 20px;
   background-color: #fff;
   border-radius: 10px;
-  width: 80dvw;
+  width: 97%;
   margin: 20px;
 }
 
