--- a/src/component/webMain/css/mainPage.css
+++ b/src/component/webMain/css/mainPage.css
@@ -97,7 +97,7 @@
 }
 
 /*  */
-/* 
+
 .co {
   display: flex;
   flex-direction: row;
@@ -106,11 +106,11 @@
 }
 .wrapper-container {
   background-color: #f4f4f9;
-  width: 100%;
+  /* width: 100%; */
   padding: 10px;
 }
 .side {
-  width: 20%;
+  /* width: 20%; */
 }
 
 .container {
@@ -118,7 +118,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 12px;
-  width: 80%;
+  /* width: 80%; */
 }
 .mainContainer {
   flex: 1;
@@ -127,21 +127,6 @@
   border-radius: 10px;
   width: 97%;
   margin: 20px;
-} */
-
-.co {
-  display: flex;
-  min-height: 100vh;
-}
-
-.side {
-  width: 250px;
-  background: #f0f0f0;
-}
-
-.wrapper-container {
-  flex: 1;
-  padding: 20px;
 }
 
 .container {
