--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #ffffff;
+  background-color: #f4f4f9;
+
   color: #333;
 }
 .main {
