--- a/src/component/webMain/css/mainPage.css
+++ b/src/component/webMain/css/mainPage.css
@@ -104,6 +104,8 @@
   justify-content: space-between;
 }
 .wrapper-container {
+  margin: 0;
+  width: 100%;
   background-color: #f4f4f9;
   padding: 10px;
 }
@@ -112,6 +114,7 @@
 }
 
 .container {
+  background-color: #f4f4f9;
   padding: 30px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
